--- a/symfony_fw/public/files/microservice/unit_test/run/test_design.html
+++ b/symfony_fw/public/files/microservice/unit_test/run/test_design.html
@@ -46,7 +46,7 @@
                                 QUnit.test("test_design", function(assert) {
                                     var expectedValue = 0;
 
-var tags = new Array();
+var tags = [];
 tags.push(".column_left");
 
 $.each(tags, function(key, value) {
